--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ h6 {
 }
 
 #header.header-scrolled {
-  background: rgba(42, 44, 57, 0.9);
+  background: green;
 }
 
 #header .logo h1 {
@@ -144,7 +144,7 @@ h6 {
   justify-content: space-between;
   padding: 5px 15px 7px 15px;
   margin-left: 5px;
-  font-size: 14px;
+  font-size: 15px;
   color: #fff;
   white-space: nowrap;
   transition: 0.3s;
@@ -345,7 +345,7 @@ h6 {
   width: 100%;
   overflow: hidden;
   position: relative;
-  background: linear-gradient(0deg, rgb(42, 44, 57) 0%, rgb(51, 54, 74) 100%);
+  background: linear-gradient(0deg, #198754 0%, rgb(51, 54, 74) 100%);
   padding-top: 3rem;
 }
 
@@ -523,7 +523,7 @@ section {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #2a2c39;
+  color: #2f3092;
 }
 
 /*--------------------------------------------------------------
@@ -676,7 +676,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #2a2c39;
+  background: green;
   padding: 80px 0;
 }
 
@@ -1535,7 +1535,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #14151c;
+  background: green;
   color: #fff;
   font-size: 14px;
   text-align: center;
@@ -1617,4 +1617,22 @@ section {
 }
 .mission-sub{
   color: #bd5102;
+}
+
+
+/* media style */
+
+th.table-bg {
+  background-color: #2f3092;
+  color: white;
+}
+
+
+  .bg-primary {
+    background-color: #ff731d !important;
+}
+.btn-style {
+  font-weight: 600;
+  line-height: 1.5;
+  color: #fff;
 }
